--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ I actively collaborate with international scholars on projects targeting top com
         <!-- M.Sc. -->
         <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="100">
           <h3 class="font-semibold text-2xl flex items-center gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/kntu.png" class="w-10 h-10" alt="KNTU" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" class="w-10 h-10" alt="KNTU" />
             M.Sc. in Electrical & Electronics Engineering —
             <a href="https://en.pars.kntu.ac.ir/" style="color: inherit; text-decoration: underline;"
               >K. N. Toosi University of Technology</a
@@ -175,7 +175,7 @@ I actively collaborate with international scholars on projects targeting top com
         <!-- B.Sc. -->
         <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="200">
           <h3 class="font-semibold text-2xl flex items-center gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/aut.png" class="w-10 h-10" alt="AUT" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/aut.png" class="w-10 h-10" alt="AUT" />
             B.Sc. in Electrical & Control Engineering —
             <a href="https://aut.ac.ir/" style="color: inherit; text-decoration: underline;"
               >Amirkabir University of Technology</a
@@ -193,7 +193,7 @@ I actively collaborate with international scholars on projects targeting top com
         <!-- Diploma -->
         <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="300">
           <h3 class="font-semibold text-2xl flex items-center gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/nodet.png" class="w-10 h-10" alt="NODET" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/nodet.png" class="w-10 h-10" alt="NODET" />
             Diploma in Mathematics & Physics —
             <a href="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;"
               >National Organization for Development of Exceptional Talents (Sampad)</a
@@ -354,14 +354,14 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Deep Generative Models -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <a href="https://github.com/shining0611armor/Deep-Generative-Models"
                  class="font-semibold text-lg underline block">Deep Generative Models (DGM)</a>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Behrooz Nasihatkon</p>
               <p class="text-sm text-slate-500 mt-1">Spring 2025 • <span class="font-medium text-slate-600">Head TA</span></p>
               <a href="https://github.com/shining0611armor/Deep-Generative-Models">
-                <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/git1.png" alt="Repo"
+                <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/git1.png" alt="Repo"
                      class="w-5 h-5 inline-block mt-2" />
               </a>
             </div>
@@ -369,14 +369,14 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Advanced Mathematics for ML -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning"
                  class="font-semibold text-lg underline block">Advanced Mathematics for Machine Learning</a>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Behrooz Nasihatkon</p>
               <p class="text-sm text-slate-500 mt-1">Fall 2024 • <span class="font-medium text-slate-600">Head TA</span></p>
               <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning">
-                <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/git1.png" alt="Repo"
+                <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/git1.png" alt="Repo"
                      class="w-5 h-5 inline-block mt-2" />
               </a>
             </div>
@@ -384,7 +384,7 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Machine Learning (Fall 2024) -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <span class="font-semibold text-lg underline block">Machine Learning (ML)</span>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Babak Nasersharif</p>
@@ -394,7 +394,7 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Deep Learning -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <span class="font-semibold text-lg underline block">Deep Learning (DL)</span>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Mahdi Aliyari-Shoorehdeli</p>
@@ -404,7 +404,7 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Machine Learning (Spring 2024) -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <span class="font-semibold text-lg underline block">Machine Learning (ML)</span>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Mahdi Aliyari-Shoorehdeli</p>
@@ -519,11 +519,11 @@ I actively collaborate with international scholars on projects targeting top com
       <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📜 Certificates</h2>
       <div class="grid sm:grid-cols-2 gap-8">
         <a href="https://www.coursera.org/account/accomplishments/certificate/27H94GEHRAKE" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
-          <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
+          <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
           <span class="font-semibold">Structuring Machine Learning Projects</span>
         </a>
         <a href="https://www.coursera.org/account/accomplishments/certificate/JKQ3Y88ZWKP9" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
-          <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
+          <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
           <span class="font-semibold">Neural Networks and Deep Learning</span>
         </a>
       </div>
