--- a/index.html
+++ b/index.html
@@ -144,71 +144,105 @@ I actively collaborate with international scholars on projects targeting top com
     </div>
   </section>
 
-  <!-- Education -->
-  <section id="education" class="py-20 bg-white">
-    <div class="max-w-screen-lg mx-auto px-6">
-      <h2
-        class="text-4xl font-bold mb-12 text-center uppercase tracking-wide"
-        data-aos="zoom-in"
+<!-- Education -->
+<section id="education" class="py-20 bg-white">
+  <div class="max-w-screen-lg mx-auto px-6">
+    <h2
+      class="text-4xl font-bold mb-12 text-center uppercase tracking-wide"
+      data-aos="zoom-in"
+    >
+      🎓 Education
+    </h2>
+    <div class="space-y-12">
+      <!-- M.Sc. -->
+      <div
+        class="bg-gray-50 shadow-lg rounded-2xl p-8"
+        data-aos="fade-left"
+        data-aos-delay="100"
       >
-        🎓 Education
-      </h2>
-      <div class="space-y-12">
-        <!-- M.Sc. -->
-        <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="100">
-          <h3 class="font-semibold text-2xl flex items-center gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" class="w-10 h-10" alt="KNTU" />
-            M.Sc. in Electrical & Electronics Engineering —
-            <a href="https://en.pars.kntu.ac.ir/" style="color: inherit; text-decoration: underline;"
-              >K. N. Toosi University of Technology</a
-            >
-          </h3>
-          <p class="mt-4 text-lg">
-            Thesis:
-            <em>Development of eye-surgery skill assessment techniques focused on video feedback.</em><br/>
-            <span class="italic">Supervisor: Prof. Hamid D. Taghirad</span>
-          </p>
-          <p class="mt-6 text-sm text-slate-500">
-            <strong>Year:</strong> 2019 – 2022 <strong>GPA:</strong> 4 / 4
-          </p>
-        </div>
-        <!-- B.Sc. -->
-        <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="200">
-          <h3 class="font-semibold text-2xl flex items-center gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/aut.png" class="w-10 h-10" alt="AUT" />
-            B.Sc. in Electrical & Control Engineering —
-            <a href="https://aut.ac.ir/" style="color: inherit; text-decoration: underline;"
-              >Amirkabir University of Technology</a
-            >
-          </h3>
-          <p class="mt-4 text-lg">
-            Thesis:
-            <em>Design & implementation of indoor positioning for a four-wheeled robot.</em><br/>
-            <span class="italic">Advisors: Dr. Mohammad A. Khosravi & Dr. Hajar Atrianfar</span>
-          </p>
-          <p class="mt-6 text-sm text-slate-500">
-            <strong>Year:</strong> 2015 – 2019 <strong>GPA:</strong> 3.7 / 4
-          </p>
-        </div>
-        <!-- Diploma -->
-        <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="300">
-          <h3 class="font-semibold text-2xl flex items-center gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/nodet.png" class="w-10 h-10" alt="NODET" />
-            Diploma in Mathematics & Physics —
-            <a href="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;"
-              >National Organization for Development of Exceptional Talents (Sampad)</a
-            >
-          </h3>
-          <p class="mt-4 text-lg">
-            Completed rigorous STEM curriculum with advanced research projects.
-          </p>
-          <p class="mt-6 text-sm text-slate-500">
-            <strong>Year:</strong> 2011 – 2015 <strong>GitPA:</strong> 4 / 4 (20 / 20)
-          </p>
-        </div>
+        <h3 class="font-semibold text-2xl flex items-center gap-3">
+          <img
+            src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/kntu.png?raw=true"
+            class="w-10 h-10"
+            alt="KNTU"
+          />
+          M.Sc. in Digital Electronic Engineering —
+          <a
+            href="https://en.pars.kntu.ac.ir/"
+            style="color: inherit; text-decoration: underline;"
+            >K. N. Toosi University of Technology (KNTU)</a
+          >
+        </h3>
+        <p class="mt-4 text-lg">
+          Thesis:
+          <em>Test-Time Domain Adaptation in 3D Point Clouds</em><br />
+          <span class="italic">Supervisor: Dr. Behrooz Nasihatkon</span>
+        </p>
+        <ul class="mt-4 list-disc pl-6 text-lg text-slate-700">
+          <li>GPA: 18.43 / 20 (≈ 3.9 / 4)</li>
+          <li><strong>Ranked 1st</strong> in Program</li>
+          <li>Thesis Grade: Full Marks (20 / 20)</li>
+        </ul>
+        <p class="mt-6 text-sm text-slate-500">
+          <strong>Year:</strong> Sep. 2022 – Oct. 2025
+        </p>
+      </div>
+
+      <!-- B.Sc. -->
+      <div
+        class="bg-gray-50 shadow-lg rounded-2xl p-8"
+        data-aos="fade-left"
+        data-aos-delay="200"
+      >
+        <h3 class="font-semibold text-2xl flex items-center gap-3">
+          <img
+            src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/scu.png?raw=true"
+            class="w-10 h-10"
+            alt="SCU"
+          />
+          B.Sc. in Electrical Engineering – Electronics —
+          <a
+            href="https://scu.ac.ir/en"
+            style="color: inherit; text-decoration: underline;"
+            >Shahid Chamran University of Ahvaz</a
+          >
+        </h3>
+        <p class="mt-4 text-lg">
+          Final Project:
+          <em>Undergraduate Project (Full Marks)</em><br />
+          <span class="italic">Supervisor: Dr. Seyyed Sajjad Moosapour</span>
+        </p>
+        <ul class="mt-4 list-disc pl-6 text-lg text-slate-700">
+          <li>GPA: 17.70 / 20</li>
+          <li>Graduated <strong>2nd</strong> in Program</li>
+          <li>Project Grade: Full Marks (20 / 20)</li>
+        </ul>
+        <p class="mt-6 text-sm text-slate-500">
+          <strong>Year:</strong> Sep. 2017 – Jan. 2022
+        </p>
+      </div>
+
+      <!-- High School -->
+      <div
+        class="bg-gray-50 shadow-lg rounded-2xl p-8"
+        data-aos="fade-left"
+        data-aos-delay="300"
+      >
+        <h3 class="font-semibold text-2xl flex items-center gap-3">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/5/57/Education_icon.svg"
+            class="w-10 h-10"
+            alt="High School"
+          />
+          High School Diploma — Dr. Hesabi Leading Government High School, Ahwaz
+        </h3>
+        <p class="mt-4 text-lg">
+          Completed Mathematics and Physics curriculum with honors.
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Technical Skills -->
   <section id="skills" class="py-20 bg-gray-50">
