--- a/index.html
+++ b/index.html
@@ -388,14 +388,14 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Deep Generative Models -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <a href="https://github.com/shining0611armor/Deep-Generative-Models"
                  class="font-semibold text-lg underline block">Deep Generative Models (DGM)</a>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Behrooz Nasihatkon</p>
               <p class="text-sm text-slate-500 mt-1">Spring 2025 • <span class="font-medium text-slate-600">Head TA</span></p>
               <a href="https://github.com/shining0611armor/Deep-Generative-Models">
-                <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/git1.png" alt="Repo"
+                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo"
                      class="w-5 h-5 inline-block mt-2" />
               </a>
             </div>
@@ -403,14 +403,14 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Advanced Mathematics for ML -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning"
                  class="font-semibold text-lg underline block">Advanced Mathematics for Machine Learning</a>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Behrooz Nasihatkon</p>
               <p class="text-sm text-slate-500 mt-1">Fall 2024 • <span class="font-medium text-slate-600">Head TA</span></p>
               <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning">
-                <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/git1.png" alt="Repo"
+                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo"
                      class="w-5 h-5 inline-block mt-2" />
               </a>
             </div>
@@ -418,7 +418,7 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Machine Learning (Fall 2024) -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <span class="font-semibold text-lg underline block">Machine Learning (ML)</span>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Babak Nasersharif</p>
@@ -428,7 +428,7 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Deep Learning -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <span class="font-semibold text-lg underline block">Deep Learning (DL)</span>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Mahdi Aliyari-Shoorehdeli</p>
@@ -438,7 +438,7 @@ I actively collaborate with international scholars on projects targeting top com
 
           <!-- Machine Learning (Spring 2024) -->
           <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
-            <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
               <span class="font-semibold text-lg underline block">Machine Learning (ML)</span>
               <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Mahdi Aliyari-Shoorehdeli</p>
@@ -470,6 +470,7 @@ I actively collaborate with international scholars on projects targeting top com
     </div>
   </div>
 </section>
+
 
 
 
