--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ I actively collaborate with international scholars on projects targeting top com
       >
         <h3 class="font-semibold text-2xl flex items-center gap-3">
           <img
-            src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/scu.png?raw=true"
+            src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/chamran_logo.jpeg?raw=true"
             class="w-10 h-10"
             alt="SCU"
           />
@@ -209,12 +209,10 @@ I actively collaborate with international scholars on projects targeting top com
         </h3>
         <p class="mt-4 text-lg">
           Final Project:
-          <em>Undergraduate Project (Full Marks)</em><br />
           <span class="italic">Supervisor: Dr. Seyyed Sajjad Moosapour</span>
         </p>
         <ul class="mt-4 list-disc pl-6 text-lg text-slate-700">
-          <li>GPA: 17.70 / 20</li>
-          <li>Graduated <strong>2nd</strong> in Program</li>
+          <li>GPA: 17.70 / 20  -- Graduated <strong>2nd</strong> in Program</li>
           <li>Project Grade: Full Marks (20 / 20)</li>
         </ul>
         <p class="mt-6 text-sm text-slate-500">
@@ -230,7 +228,7 @@ I actively collaborate with international scholars on projects targeting top com
       >
         <h3 class="font-semibold text-2xl flex items-center gap-3">
           <img
-            src="https://upload.wikimedia.org/wikipedia/commons/5/57/Education_icon.svg"
+            src="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;"
             class="w-10 h-10"
             alt="High School"
           />
