--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@ I actively collaborate with international scholars on projects targeting top com
             class="w-10 h-10"
             alt="High School"
           />
-          High School Diploma — Dr. Hesabi Leading Government High School, Ahwaz
+          Diploma in Mathematics & Physics — Dr. Hesabi Leading Government High School, Ahwaz
         </h3>
         <p class="mt-4 text-lg">
-          Completed Mathematics and Physics curriculum with honors.
+          Completed rigorous STEM curriculum with advanced research projects.
       </div>
     </div>
   </div>
