--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@ I actively collaborate with international scholars on projects targeting top com
           >
         </h3>
         <p class="mt-4 text-lg">
-          Final Project:
+          Thesis:
+          <em>Design and implementation of a speed controller and autopilot architecture for agricultural quadcopters</em><br />
           <span class="italic">Supervisor: Dr. Seyyed Sajjad Moosapour</span>
         </p>
         <ul class="mt-4 list-disc pl-6 text-lg text-slate-700">
