--- a/index.html
+++ b/index.html
@@ -92,57 +92,94 @@ My research focuses on Multimodal AI (Vision-Language Models), 3D Computer Visio
 I actively collaborate with international scholars on projects targeting top computer vision venues.
       </p>
     </div>
-  </section>
+<section id="highlights" class="py-20 bg-gray-50">
+  <div class="max-w-screen-lg mx-auto px-6">
+    <h2
+      class="text-4xl font-bold mb-12 text-center uppercase tracking-wide"
+      data-aos="zoom-in"
+    >
+      🌟 Career Highlights
+    </h2>
 
-  <!-- Career Highlights -->
-  <section id="highlights" class="py-20 bg-gray-50">
-    <div class="max-w-screen-lg mx-auto px-6">
-      <h2
-        class="text-4xl font-bold mb-12 text-center uppercase tracking-wide"
-        data-aos="zoom-in"
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
+      <div
+        class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition"
+        data-aos="fade-up"
       >
-        🌟 Highlights
-      </h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
-        <div class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition" data-aos="fade-up">
-          <span class="text-3xl mr-4">🚀</span>
-          <p class="text-lg">
-            <span class="font-semibold">Head of
-              <a href="https://aras.kntu.ac.ir/ai" style="color: inherit; text-decoration: underline;"
-                >ARAS AI, VR & Software Group</a
-              ></span
-            >, advancing surgical education and medical image diagnosis.
-          </p>
-        </div>
-        <div class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
-          <span class="text-3xl mr-4">💼</span>
-          <p class="text-lg">
-            <span class="font-semibold">CTO at
-              <a href="https://www.mediversai.com/" style="color: inherit; text-decoration: underline;"
-                >MediversAI</a
-              ></span
-            >, leading AI development and end-to-end software solutions.
-          </p>
-        </div>
-        <div class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-          <span class="text-3xl mr-4">📈</span>
-          <p class="text-lg"><span class="font-semibold">AI & Data Engineer</span> with over 5 years deploying deep-learning pipelines in production.</p>
-        </div>
-        <div class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="300">
-          <span class="text-3xl mr-4">🔍</span>
-          <p class="text-lg"><span class="font-semibold">Computer Vision & Data Analysis Expert</span> with an extensive research track record.</p>
-        </div>
-        <div class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="400">
-          <span class="text-3xl mr-4">🤝</span>
-          <p class="text-lg">Led technical client engagements, presenting AI products and exploratory data analysis results.</p>
-        </div>
-        <div class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="500">
-          <span class="text-3xl mr-4">🎓</span>
-          <p class="text-lg">Mentor to AI developers for 4+ years, teaching Python, ML, DL, CV, and AI in Robotics.</p>
-        </div>
+        <span class="text-3xl mr-4">🚀</span>
+        <p class="text-lg">
+          <span class="font-semibold">Active Researcher</span> contributing to
+          AI and Computer Vision projects targeting leading venues.
+        </p>
+      </div>
+
+      <div
+        class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition"
+        data-aos="fade-up"
+        data-aos-delay="100"
+      >
+        <span class="text-3xl mr-4">💼</span>
+        <p class="text-lg">
+          <span class="font-semibold">Advisor and Research Collaborator</span>
+          on multiple AI-driven academic and industrial projects.
+        </p>
+      </div>
+
+      <div
+        class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition"
+        data-aos="fade-up"
+        data-aos-delay="200"
+      >
+        <span class="text-3xl mr-4">📈</span>
+        <p class="text-lg">
+          <span class="font-semibold">AI & Data Engineer</span> with over three
+          years of experience developing and deploying deep-learning pipelines
+          in production environments.
+        </p>
+      </div>
+
+      <div
+        class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition"
+        data-aos="fade-up"
+        data-aos-delay="300"
+      >
+        <span class="text-3xl mr-4">🔍</span>
+        <p class="text-lg">
+          <span class="font-semibold">Computer Vision and Data Analysis
+          Specialist</span> with a strong record of research in
+          multi-modal learning and model adaptation.
+        </p>
+      </div>
+
+      <div
+        class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition"
+        data-aos="fade-up"
+        data-aos-delay="400"
+      >
+        <span class="text-3xl mr-4">🤝</span>
+        <p class="text-lg">
+          <span class="font-semibold">Research Leader</span> guiding AI teams
+          and presenting technical findings in collaborative and client-focused
+          environments.
+        </p>
+      </div>
+
+      <div
+        class="flex items-start bg-white shadow-lg rounded-2xl p-6 hover:shadow-2xl transition"
+        data-aos="fade-up"
+        data-aos-delay="500"
+      >
+        <span class="text-3xl mr-4">🎓</span>
+        <p class="text-lg">
+          <span class="font-semibold">Mentor and Instructor</span> for graduate
+          students and developers in Python, Machine Learning, Deep Learning,
+          Computer Vision.
+        </p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
 <!-- Education -->
 <section id="education" class="py-20 bg-white">
