--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@ I actively collaborate with international scholars on projects targeting top com
       >
         <span class="text-3xl mr-4">📈</span>
         <p class="text-lg">
-          <span class="font-semibold">AI & Data Engineer</span> with over three
-          years of experience developing and deploying deep-learning pipelines
-          in production environments.
+          <span class="font-semibold">Electronic Engineer</span> with a strong background in signal processing, mathematics, and microprocessor-based system design.
         </p>
       </div>
 
