--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ I actively collaborate with international scholars on projects targeting top com
       class="text-4xl font-bold mb-12 text-center uppercase tracking-wide"
       data-aos="zoom-in"
     >
-      🌟 Career Highlights
+      🌟 Highlights
     </h2>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
