--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ I actively collaborate with international scholars on projects targeting top com
       >
         <span class="text-3xl mr-4">🔍</span>
         <p class="text-lg">
-          <span class="font-semibold">Computer Vision and Data Analysis Specialist with over two years of research experience in multi-modal learning and model adaptation.
+          <span class="font-semibold">3D Vision and Data Analysis </span> contributor with over two years of research experience in multi-modal learning and model adaptation.
         </p>
       </div>
 
