--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ I actively collaborate with international scholars on projects targeting top com
       >
         <h3 class="font-semibold text-2xl flex items-center gap-3">
           <img
-            src="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;"
+            src="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents"
             class="w-10 h-10"
             alt="High School"
           />
@@ -272,6 +272,9 @@ I actively collaborate with international scholars on projects targeting top com
           Completed rigorous STEM curriculum with advanced research projects.
       </div>
     </div>
+             <p class="mt-6 text-sm text-slate-500">
+          <strong>Year:</strong>  2014 – 2017
+        </p>
   </div>
 </section>
 
