--- a/index.html
+++ b/index.html
@@ -180,101 +180,60 @@ I actively collaborate with international scholars on projects targeting top com
 <!-- Education -->
 <section id="education" class="py-20 bg-white">
   <div class="max-w-screen-lg mx-auto px-6">
-    <h2
-      class="text-4xl font-bold mb-12 text-center uppercase tracking-wide"
-      data-aos="zoom-in"
-    >
+    <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
       🎓 Education
     </h2>
+
     <div class="space-y-12">
       <!-- M.Sc. -->
-      <div
-        class="bg-gray-50 shadow-lg rounded-2xl p-8"
-        data-aos="fade-left"
-        data-aos-delay="100"
-      >
+      <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left">
         <h3 class="font-semibold text-2xl flex items-center gap-3">
-          <img
-            src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/kntu.png?raw=true"
-            class="w-10 h-10"
-            alt="KNTU"
-          />
+          <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/kntu.png?raw=true" class="w-10 h-10" alt="KNTU" />
           M.Sc. in Digital Electronic Engineering —
-          <a
-            href="https://en.pars.kntu.ac.ir/"
-            style="color: inherit; text-decoration: underline;"
-            >K. N. Toosi University of Technology (KNTU)</a
-          >
+          <a href="https://en.pars.kntu.ac.ir/" style="color: inherit; text-decoration: underline;">K. N. Toosi University of Technology (KNTU)</a>
         </h3>
         <p class="mt-4 text-lg">
-          Thesis:
-          <em>Test-Time Domain Adaptation in 3D Point Clouds</em><br />
+          Thesis: <em>Test-Time Domain Adaptation in 3D Point Clouds</em><br/>
           <span class="italic">Supervisor: Dr. Behrooz Nasihatkon</span>
         </p>
-        <ul class="mt-4 list-disc pl-6 text-lg text-slate-700">
-          <li>GPA: 18.43 / 20 (≈ 3.9 / 4)</li>
-          <li><strong>Ranked 1st</strong> in Program</li>
-          <li>Thesis Grade: Full Marks (20 / 20)</li>
-        </ul>
         <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong> Sep. 2022 – Oct. 2025
+          <strong>Year:</strong> Sep. 2022 – Oct. 2025 <strong>GPA:</strong> 18.43 / 20 (≈ 3.9 / 4)
         </p>
       </div>
 
       <!-- B.Sc. -->
-      <div
-        class="bg-gray-50 shadow-lg rounded-2xl p-8"
-        data-aos="fade-left"
-        data-aos-delay="200"
-      >
+      <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="100">
         <h3 class="font-semibold text-2xl flex items-center gap-3">
-          <img
-            src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/chamran_logo.jpeg?raw=true"
-            class="w-10 h-10"
-            alt="SCU"
-          />
+          <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/chamran_logo.jpeg?raw=true" class="w-10 h-10" alt="SCU" />
           B.Sc. in Electrical Engineering – Electronics —
-          <a
-            href="https://scu.ac.ir/en"
-            style="color: inherit; text-decoration: underline;"
-            >Shahid Chamran University of Ahvaz</a
-          >
+          <a href="https://scu.ac.ir/en" style="color: inherit; text-decoration: underline;">Shahid Chamran University of Ahvaz</a>
         </h3>
         <p class="mt-4 text-lg">
-          Thesis:
-          <em>Design and implementation of a speed controller and autopilot architecture for agricultural quadcopters</em><br />
+          Thesis: <em>Design and implementation of a speed controller and autopilot architecture for agricultural quadcopters</em><br/>
           <span class="italic">Supervisor: Dr. Seyyed Sajjad Moosapour</span>
         </p>
-        <ul class="mt-4 list-disc pl-6 text-lg text-slate-700">
-          <li>GPA: 17.70 / 20  -- Graduated <strong>2nd</strong> in Program</li>
-          <li>Project Grade: Full Marks (20 / 20)</li>
-        </ul>
         <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong> Sep. 2017 – Jan. 2022
+          <strong>Year:</strong> Sep. 2017 – Jan. 2022 <strong>GPA:</strong> 17.70 / 20
         </p>
       </div>
 
       <!-- High School -->
-      <div
-        class="bg-gray-50 shadow-lg rounded-2xl p-8"
-        data-aos="fade-left"
-        data-aos-delay="300"
-      >
+      <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="200">
         <h3 class="font-semibold text-2xl flex items-center gap-3">
-          <img
-            src="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents"
-            class="w-10 h-10"
-            alt="High School"
-          />
-          Diploma in Mathematics & Physics — Dr. Hesabi Leading Government High School, Ahwaz
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/NODET_Logo.png" class="w-10 h-10" alt="High School" />
+          Diploma in Mathematics & Physics —
+          <a href="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;">
+            Dr. Hesabi Leading Government High School, Ahwaz 
+          </a>
         </h3>
         <p class="mt-4 text-lg">
           Completed rigorous STEM curriculum with advanced research projects.
+        </p>
+        <p class="mt-6 text-sm text-slate-500">
+          <strong>Year:</strong> 2014 – 2017
+        </p>
       </div>
     </div>
-             <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong>  2014 – 2017
-        </p>
   </div>
 </section>
 
