--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ I actively collaborate with international scholars on projects targeting top com
       <!-- High School -->
       <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="200">
         <h3 class="font-semibold text-2xl flex items-center gap-3">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/NODET_Logo.png" class="w-10 h-10" alt="High School" />
+          <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/nodet.png" class="w-10 h-10" alt="NODET" />
           Diploma in Mathematics & Physics —
           <a href="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;">
             Dr. Hesabi Leading Government High School, Ahwaz 
