--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <p class="text-lg leading-relaxed">
 I'm Mehran Tamjidi, an enthusiastic Computer Vision and AI Researcher pursuing my M.Sc. at K. N. Toosi University of Technology.
 My research focuses on Multimodal AI (Vision-Language Models), 3D Computer Vision, Generative AI, and Test-Time Generalization, among other emerging areas in artificial intelligence.
-I actively collaborate with international scholars on projects targeting top computer vision venues.
+I actively collaborate with international scholars on projects targeting top computer vision venues. My fields of interest include: Test-Time Domain Adaptation, Multi-Modal and Generative AI, 3D Computer Vision, Large Vision-Language Models, Hallucination Mitigation, Large Language Models, Machine Unlearning, and Visual In-Context Learning.
       </p>
     </div>
 <section id="highlights" class="py-20 bg-gray-50">
