--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ I actively collaborate with international scholars on projects targeting top com
       >
         <span class="text-3xl mr-4">🔍</span>
         <p class="text-lg">
-          <span class="font-semibold">3D Vision and Data Analysis </span> contributor with over two years of research experience in multi-modal learning and model adaptation.
+          <span class="font-semibold">Computer Vision and Data Analysis </span> contributor with over two years of research experience in multi-modal learning and model adaptation.
         </p>
       </div>
 
@@ -197,7 +197,7 @@ I actively collaborate with international scholars on projects targeting top com
           <span class="italic">Supervisor: Dr. Behrooz Nasihatkon</span>
         </p>
         <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong> Sep. 2022 – Oct. 2025 <strong>GPA:</strong> 18.43 / 20 (≈ 3.9 / 4)
+          <strong>Year:</strong> Sep. 2022 – Oct. 2025 <strong>GPA:</strong> 18.43 / 20 (≈ 3.9 / 4)  <strong>First:</strong> Rank
         </p>
       </div>
 
@@ -213,7 +213,7 @@ I actively collaborate with international scholars on projects targeting top com
           <span class="italic">Supervisor: Dr. Seyyed Sajjad Moosapour</span>
         </p>
         <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong> Sep. 2017 – Jan. 2022 <strong>GPA:</strong> 17.70 / 20
+          <strong>Year:</strong> Sep. 2017 – Jan. 2022 <strong>GPA:</strong> 17.70 / 20  <strong>second:</strong> Rank
         </p>
       </div>
 
