--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@ I actively collaborate with international scholars on projects targeting top com
           </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="400">
             <i class="devicon-django-plain colored text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Django & SQL</span>
+            <span class="font-semibold text-sm">Android</span>
           </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
             <i class="fa-solid fa-mobile-screen-button text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Qt & Flutter</span>
+            <span class="font-semibold text-sm">VHDL</span>
           </div>
         </div>
       </div>
