--- a/index.html
+++ b/index.html
@@ -280,29 +280,30 @@ I actively collaborate with international scholars on projects targeting top com
       <div class="mt-12" data-aos="fade-up" data-aos-delay="200">
         <h3 class="text-2xl font-semibold mb-6">🧠 Domain Knowledge</h3>
         <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left">
-            <i class="fa-solid fa-brain text-red-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">AI & Data Science</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="100">
-            <i class="fa-solid fa-eye text-green-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Computer Vision & NLP</span>
-          </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="200">
             <i class="fa-solid fa-layer-group text-purple-500 text-3xl mb-1"></i>
             <span class="font-semibold text-sm">Machine / Deep Learning</span>
           </div>
+          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="100">
+            <i class="fa-solid fa-eye text-green-500 text-3xl mb-1"></i>
+            <span class="font-semibold text-sm">2D/3D Computer Vision </span>
+          </div>
+
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="300">
             <i class="fa-solid fa-laptop-code text-indigo-500 text-3xl mb-1"></i>
             <span class="font-semibold text-sm">Software Development</span>
           </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="400">
             <i class="fa-solid fa-server text-yellow-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Backend Frameworks</span>
+            <span class="font-semibold text-sm"> Molti-Modal (Vision-Language)|Generative AI</span>
+          </div>
+          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left">
+            <i class="fa-solid fa-brain text-red-500 text-3xl mb-1"></i>
+            <span class="font-semibold text-sm"> Test-Time domain adaptation | Hallucination mitigation</span>
           </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
             <i class="fa-solid fa-robot text-blue-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Robotics & Control</span>
+            <span class="font-semibold text-sm">Electronics & Signal Processing</span>
           </div>
         </div>
       </div>
